perf(engine): EP-7 virtual threads — BotSession fleet + gs-readers + dashboard on Thread.ofVirtual (415 tests green)